--- a/android/TasksProject/Tasks Example/build.gradle
+++ b/android/TasksProject/Tasks Example/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 android {
-    compileSdkVersion 17
+    compileSdkVersion 16
     buildToolsVersion "17.0.0"
 
     defaultConfig {
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
-	compile 'com.android.support:support-v4:13.0.0'
-	compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:support-v4:13.0.0'
+    compile 'com.android.support:appcompat-v7:+'
+    compile project(':Task')
 }
