--- a/android/TasksProject/Tasks Example/src/main/AndroidManifest.xml
+++ b/android/TasksProject/Tasks Example/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="16" />
 
     <application
         android:allowBackup="true"
@@ -24,7 +24,7 @@
         </activity>
 
         <activity
-            android:name="com.beyondar.android.util.task.example.TaskWithUiThreadAccess" />
+            android:name=".TaskWithUiThreadAccessActivity" />
     </application>
 
 </manifest>
