--- a/android/TasksExample/AndroidManifest.xml
+++ b/android/TasksExample/AndroidManifest.xml
@@ -22,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TaskWithUiThreadAccessActivity" />
+        <activity android:name=".TaskWithDependenciesActivity" />
     </application>
 
 </manifest>
